# glpi_dashboard

./: .coverage  .gitignore  .replit  BYTEROVER.md  CONFIGURACAO_GLPI.md  INSTRUCAO_ANALISE_CODEX_ENDPOINTS_NULL.md  INSTRUCAO_ANALISE_DADOS_ZERADOS.md  MAPEAMENTO_ARQUITETURAS.md  Makefile  PROJECT_KNOWLEDGE.md  QUALITY_VALIDATION_REPORT.md  README.md  RELATORIO_ANALISE_DADOS_ZERADOS.md  REPLIT_AI_INSTRUCTIONS.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker.env  replit.md  requirements.txt
refatorado/glpi_dashboard/glpi_dashboard/: .pre-commit-config.yaml  README.md  pyproject.toml
refatorado/glpi_dashboard/glpi_dashboard/apps/api/src/glpi_dashboard_api/: main.py  schemas.py
refatorado/glpi_dashboard/glpi_dashboard/apps/api/src/glpi_dashboard_api/config/: settings.py
refatorado/glpi_dashboard/glpi_dashboard/apps/api/src/glpi_dashboard_api/dependencies/: services.py
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/: globals.css  layout.tsx  providers.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/(dashboard)/dashboard/: page.module.css  page.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/(dashboard)/observability/: page.module.css  page.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/(dashboard)/technicians/: page.module.css  page.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/(dashboard)/tickets/: page.module.css  page.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/components/atoms/: KpiCard.module.css  KpiCard.tsx  StatusBadge.module.css  StatusBadge.tsx  TimeRangePicker.module.css  TimeRangePicker.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/components/layouts/: DashboardLayout.module.css  DashboardLayout.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/components/molecules/: TechnicianLegend.module.css  TechnicianLegend.tsx  TicketsTable.module.css  TicketsTable.tsx
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/components/organisms/: SlaTrendChart.module.css  SlaTrendChart.tsx  SystemHealthPanel.module.css  SystemHealthPanel.tsx  TechnicianRankingBoard.module.css  (+3 more)
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/services/: metricsClient.ts
refatorado/glpi_dashboard/glpi_dashboard/apps/frontend/app/state/: filtersStore.ts
refatorado/glpi_dashboard/glpi_dashboard/apps/worker_ingestion/src/glpi_dashboard_worker_ingestion/: config.py  main.py
refatorado/glpi_dashboard/glpi_dashboard/platform/ci_cd/: README.md
refatorado/glpi_dashboard/glpi_dashboard/platform/docs/: README.md
refatorado/glpi_dashboard/glpi_dashboard/platform/infrastructure/: README.md
(+213 files in other folders)
